@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2004-2005 by Konstantin V. Arkhipov                     *
+ *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -132,7 +132,7 @@
 				$this->value = $scope[$this->name]['tmp_name'];
 				$this->originalName = $scope[$this->name]['name'];
 
-				return true;
+				return $this->imported = true;
 			}
 
 			return false;
