@@ -27,7 +27,7 @@
 			) {
 				$this->value = $scope[$this->name];
 				
-				return true;
+				return $this->imported = true;
 			}
 			
 			return false;
